# make-markdown-library

./: .gitignore  CHANGELOG.md  LICENSE  README.md  llms.txt  make-markdown-library.py  mkdocs.yml  pyproject.toml  site.config.json  view-markdown-library.html
.github/workflows/: build-release.yml  publish-site.yml  tests.yml
docs/: cli-reference.md  download.md  getting-started.md  index.md  output-reference.md  processing-rules.md  troubleshooting.md
docs/guides/: agent-workflows.md  converter-modes.md  github-pages.md  gui-usage.md  indexes-json-yaml.md  install-python-windows.md  liteparse-fallback.md  markdown-folders.md  markdown-library-viewer.md  ocr-and-pdfs.md  rebuilding-libraries.md  static-html-site.md  uninstall.md  windows-install.md  windows-prerequisites.md
make_markdown_library/: __init__.py  __main__.py  cli.py  core.py  gui.py
scripts/: build_static_site.py
site/: index.html  llms.txt  search-index.json
site/assets/: docs.css  docs.js
site/cli-reference/: index.html
site/css/: style.css
site/download/: index.html
site/getting-started/: index.html
site/guides/agent-workflows/: index.html
site/guides/converter-modes/: index.html
site/guides/github-pages/: index.html
site/guides/gui-usage/: index.html
site/guides/indexes-json-yaml/: index.html
site/guides/install-python-windows/: index.html
site/guides/liteparse-fallback/: index.html
site/guides/markdown-folders/: index.html
site/guides/markdown-library-viewer/: index.html
site/guides/ocr-and-pdfs/: index.html
site/guides/rebuilding-libraries/: index.html
site/guides/static-html-site/: index.html
site/guides/uninstall/: index.html
site/guides/windows-install/: index.html
site/guides/windows-prerequisites/: index.html
site/output-reference/: index.html
site/processing-rules/: index.html
site/troubleshooting/: index.html
site/viewer/: README.md  app.js  styles.css
tests/: test_core.py
viewer/: index.html
