[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "make-markdown-library"
version = "0.1.0"
description = "Turn a folder of mixed files into one Markdown library file (and optional per-source files) for AI, storage, and search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "markbeachill" }]
keywords = ["markdown", "library", "ai", "conversion", "markitdown"]
dependencies = [
    "markitdown[all]>=0.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://markbeachill.github.io/make-markdown-library"
Repository = "https://github.com/markbeachill/make-markdown-library"

[project.scripts]
make-markdown-library = "make_markdown_library.cli:main"

[project.gui-scripts]
make-markdown-library-gui = "make_markdown_library.gui:main"

[tool.setuptools]
packages = ["make_markdown_library"]
